--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.servlet.multipart.max-request-size=10MB
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=latifalayla19@gmail.com
-spring.mail.password=pxpb oitn kpgo plql
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.transport.protocol=smtp
